syntax = "proto3";

package shared;

enum ProtoImageFormat {
    JPEG = 0;
    PNG = 1;
    WEBP = 2;
    RAW = 3;
}

message ProtoImage {
    bytes data = 1;
    ProtoImageFormat format = 2;
    int32 width = 3;
    int32 height = 4;
}
